css/styles.css
@font-face {
    font-family: norse-bold;
    src: url("../resources/font/Norsebold.otf");
}

*,
*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: 0;
}

:root {
    font: 16px Verdana;

    --font-color-light: #f9fafb;
}

body {
    background-color: #f9fafb;
    display: flex;
    height: 100vh
}

.sidebar {
    background-image: url(../resources/img/halie-west-25xggax4bSA-unsplash.jpg);
    background-size: cover;
    /* Width of sidebar will be width of background image depending on sidebar height.
       100vh * aspect ratio of background image (width/ height)
    */
    width: calc(100vh * (1862/2792));
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
}

.banner {
    background-color: rgba(0, 0, 0, 0.5);
    height: 20%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25%;
}

.banner img {
    height: 80%;
}

.banner h1 {
    color: var(--font-color-light);
    font-size: calc(1rem + 12vh);
    font-family: "norse-bold";
}

.sidebar-footer {
    margin-bottom: 2%;
    color: var(--font-color-light);
    text-align: center;
    font-size: calc(0.25rem + 1vmin);
}

.sidebar-footer a {
    color: var(--font-color-light);
}

main {
    flex-grow: 1;
}

main > p {
    font-size: calc(0.6rem + 1.2vmin);
    margin: 3vh 20% 0 5vh;
    max-width: 1000px;
}

main > p:first-of-type {
    margin-top: 10vh;
}

form {
    margin-top: 7vh;
}

.form-container {
    padding: 2vh 5vh;
    background-color: white;
    box-shadow: 0 3px 5px  gray;
}

.form-container p {
    font-size: calc(0.6rem + 1.2vmin);
    margin-bottom: 2vh;
}

.form-input-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    max-width: 1000px;
    margin-right: 20%;
}

.form-field {
    display: flex;
    flex-direction: column;
    flex-basis: 40%;
    margin-top: 1vh;
    gap: 2px;
}

.form-field label {
    text-transform: uppercase;
    font-size: calc(0.1rem + 1.1vmin);
    color: #1e1e1e;
}

.form-field input {
    font-size: calc(0.5rem + 1vmin);
    padding: calc((0.5rem + 1vmin) / 4);
    border: 1px solid #E5E7EB;
    border-radius: 5px;
}

.form-field input:focus {
    outline: none;
    border-color: blue;
    box-shadow: 3px 3px 5px gray;
}

.form-field input:user-invalid {
    border-color: red;
}

.form-field .password-hint {
    font-size: calc(0.1rem + 1vmin);
}

.form-field input:user-invalid + .password-hint {
    color: red;
}

form button {
    background-color: #596d48;
    font-size: calc(0.3rem + 1.2vmin);
    font-family: Verdana;
    color: var(--font-color-light);
    padding: 1.25vh 3vh;
    border-radius: 5px;
    border: none;
    margin: 3vh 0 0 5vh;
    box-shadow: 3px 4px 7px darkgray;
}

form button:hover {
    cursor: pointer;
}

form button:active {
    background-color: #4b5c3d;
}

.login-label {
    font-size: calc(0.1rem + 1.1vmin);
}

